Minor fixes plus added pandas to pyproject.toml so that GitHub Actions can call it.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,9 @@ classifiers = [
 ]
 
 # Runtime deps (if any); empty is fine if you're stdlib-only
-dependencies = []
+dependencies = [
+  "pandas>=2.0",  # or whatever min version you need
+]
 
 # Optional extras for dev tools
 [project.optional-dependencies]
