--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "irs-asset-fifo-calculator"
-version = "0.0.1"
-description = "Calculate IRS capital gains taxes using FIFO from CSV input."
+version = "0.1.0"
+description = "FIFO-based IRS Form 8949 capital gains calculator for assets."
 readme = "README.md"
 requires-python = ">=3.10"
 license = { file = "LICENSE" }
@@ -33,8 +33,6 @@ dev = [
   "myst-parser>=3.0",
 ]
 
-# If you want a CLI command: `irs-fifo-taxes`
-# (Assumes you have a `main()` in calculate_taxes.py)
 [project.scripts]
 irs-fifo-taxes = "irs_asset_fifo_calculator.calculate_taxes:main"
 
@@ -47,3 +45,9 @@ where = ["src"]
 
 [tool.setuptools.package-data]
 irs_asset_fifo_calculator = ["py.typed"]
+
+[project.urls]
+Homepage = "https://github.com/elliottbache/irs_asset_fifo_calculator"
+Source = "https://github.com/elliottbache/irs_asset_fifo_calculator"
+Issues = "https://github.com/elliottbache/irs_asset_fifo_calculator/issues"
+Documentation = "https://elliottbache.github.io/irs_asset_fifo_calculator/"
