--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,10 +77,6 @@ line-length = 88
 target-version = ["py311"]
 extend-exclude = "^(migrations|build|dist|.venv|_deps)/"
 
-[tool.isort]
-skip = [".venv", "migrations", "build", "dist"]
-profile = "black"
-
 [tool.mypy]
 python_version = "3.11"
 strict = false
@@ -98,4 +94,4 @@ ignore_errors = true
 
 [tool.codespell]
 skip = "./docs/_build,./build,./dist,./.venv,./docs/html,./src/include,./docs/_static,pyproject.toml,./build*,./htmlcov"
-ignore-words-list = "teh,nd,seh,atleast,atmost"
+ignore-words-list = "teh,nd,seh,atleast,atmost,deques"
