--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,3 +95,15 @@ ignore_errors = true
 [tool.codespell]
 skip = "./docs/_build,./build,./dist,./.venv,./docs/html,./src/include,./docs/_static,pyproject.toml,./build*,./htmlcov"
 ignore-words-list = "teh,nd,seh,atleast,atmost,deques"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+pythonpath = ["."]
+addopts = [
+  "-q",
+  "--cov=src",
+  "--cov-report=term-missing",
+  "--cov-report=xml:coverage.xml",
+  "--cov-report=html:htmlcov",
+  "--cov-fail-under=85"
+]
