--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,7 @@ target-version = "py311"
 [tool.ruff.lint]
 select = ["E","F","I","UP","B","SIM","S","PERF","RUF"]
 ignore = ["E203", "E501"]  # let the formatter handle wrapping
-fixable = ["E","UP","SIM","PERF","RUF"]
+fixable = ["I", "E","UP","SIM","PERF","RUF"]
 
 [tool.ruff.lint.per-file-ignores]
 "tests/**" = ["S101"]
