refactor(df): use pyarrow to load CSV, only selecting desired columns

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ keywords = ["taxes", "IRS", "capital-gains", "FIFO"]
 # Runtime deps
 dependencies = [
   "pandas>=2.0",
+  "pyarrow"
 ]
 
 # Optional extras for dev tools
